more responses to reviewer 2

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -58,7 +58,7 @@ Stanford, CA 94305\\[20pt]
 
 \noindent Dear Editor,\\
 
-\noindent We would like to thank you and the three anonymous reviewers for your helpful comments on our paper, ``Subjectivity predicts adjective ordering preferences.'' As you will recall, you highlighted the following concerns: 
+\noindent We would like to thank you and the three reviewers for your helpful comments on our paper, ``Subjectivity predicts adjective ordering preferences.'' As you will recall, you highlighted the following concerns: 
 
 \ben
 
@@ -179,39 +179,65 @@ As with distributive predicates like \emph{have brown eyes} (cf.~our response to
 
 \item \emph{Abstract: The phrase ``stubborn distributivity'' should be attributed to Schwarzschild, as it is in the main text.}
 
+We have avoided including references in our abstract. However, we clearly attribute the label ``stubborn distributivity'' to Schwarzschild in the text.
+
 \item \emph{Pg.~3: The transition at the end of the second paragraph is a bit abrupt.}
 
 \item \emph{Pg.~3: Kamp \& Partee (1995) (perhaps among others) should be cited in the second paragraph for properties that depend on the context of predication and comparison classes.}
+
+We have added the suggested citation.
 	
 \item \emph{Pg.~3: Please revise the description of ``stubborn distributivity'' in the last paragraph. The phenomenon is not about the contrast, as described here, but rather about the observation about the latter class of predicates.}
+
+We have changed the description as suggested.
 	
 \item \emph{Pg.~4: Champollion (2015)'s proposal about stratified reference seems relevant to this discussion.}
 
+We were unable to reconstruct from this comment the intended connection between Champollion's work on stratified reference and our summary of previous work on stubborn distributivity.
+
 \item \emph{Pg.~4: The term ``complaisantly collective'' is a bit confusing. I think that the authors mean those predicates which allow for both distributive and collective interpretations, but aren't these Link's mixed predicates? These also contrast with collective predicates. (See comments above.)}
 
+We intend ``complaisantly collective'' to describe those predictes, like \emph{heavy}, that admit collective interpretations; we have added this clarification in our revision.
+
 \item \emph{Pg.~4: Using \emph{instantiate} in an intransitive frame seems weird to me (\emph{how regularly they instantiate in the world}, \emph{find objects that instantiate in regular physical arrangements}).}
+
+We have replaced \emph{instantiate} with intransitive \emph{actualize}.
 	
-\item \emph{Pg.~4: Are the authors claiming in the first paragraph that plural nouns such as numbers or ideas can admit of collective interpretations with distributive predicates? If so, it would be nice to get some examples.}
+\item \emph{Pg.~4: Are the authors claiming in the first paragraph that plural nouns such as \emph{numbers} or \emph{ideas} can admit of collective interpretations with distributive predicates? If so, it would be nice to get some examples.}
 
 \item \emph{Pg.~7, 14, 18, 23: It should be indicated how much participants were compensated.}
 
 \item \emph{Pg.~8: The between-subject inspect/move contrast should be theoretically motivated earlier in section 2.2.}
 
 \item \emph{Pg.~9: The sentence, ``The boxes each were big'' doesn't seem entirely natural to me. More natural would be, ``The boxes were each big.'' I'm assuming the authors wanted the words each and together to appear in the same syntactic position, and that is why they created the sentences in this way, but if that is the case, they should say so, in order to justify their choice of a non-default description that seems slightly unnatural.}
+
+As the reviewer suspected, we chose the post-NP \emph{each} order to minimize the differences between the \emph{each} and \emph{together} paraphrases, and we used post-NP \emph{together} for the reasons discussed above (cf.~our responses to Reviewer 2's points XXX). It isn't clear that either \emph{each} order stands as the default, so we are reluctant to label either as non-default. Indeed, none of our participants expressed concern about the wording of our \emph{each} paraphrase.
 	
 \item \emph{Pg.~10: Missing the word \emph{accessed} in the first sentence of section 2.4 (\emph{participants chose the collective referent, and therefore accessed the collective interpretation}).}
 
+We have added \emph{accessed} as suggestion.
+
 \item \emph{Pg.~11: Here and elsewhere, ``Appendix'' is mentioned twice in a row.}
+
+We have corrected this error.
 
 \item \emph{Pg.~11: If the difference is not significant, then I don't think the authors are able to mention here and later on (pg. 12) that the results approach significance, or highlight this.}
 
+
+
 \item \emph{Pg.~12: If \emph{heavy} is, as the authors say, ``complaisant toward collective interpretations,'' then shouldn't the percentage of `collective' interpretations obtained for this predicate be higher than was observed?}
 
+We ran Expt.~1 in part to establish a baseline of behavior for the three predicates; we make no quantitative predictions on the basis of \emph{heavy}'s complaisant collectivity.
+
 \item \emph{Pg.~13: The authors attribute the difference between the `move' and `inspect' scenarios to the fact that in the latter condition, the speaker does not have as much knowledge about the individual boxes, and so there is a difference in the epistemic state of the speaker. Is this really the key difference? Could it just be that in the `move' scenario, the boxes were moved en masse, and so were clearly treated as a group? The authors should address this possible interpretation of the findings.}
+
+This point is related to Reviewer 2's point 6 about silent nouns. See our response above for reasons why we find it unlikely that participants were treating the boxes as a group \emph{only} in the `move' scenario.
 
 \item \emph{Pg.~13: The ordering presented in the transition between the two paragraphs at the top was a little jolting.} 
 	
 \item \emph{Pg.~13: Experiment 1 is referred to as a ``reference task'' for what I think is the first time. Presumably this is because the speaker said, ``The boxes are\ldots'' But this was a bit confusing to encounter.}
+
+To avoid this confusion, we now say that Expt.~1 is a reference task when we mention it for the first time in the introduction.
 
 \item \emph{Pg.~14-18: The role of animacy does not appear to have been controlled for in the corpus search in the naturally-occurring or derivative examples. This seems important, and should be addressed. Note that of the examples in (6) on pg. 18, there are more inanimate nouns, and the number varies for each predicate.}
 
@@ -228,6 +254,8 @@ As with distributive predicates like \emph{have brown eyes} (cf.~our response to
 \item \emph{Pg.~18: I am concerned that the \emph{lids} noun in (6) is really eyelids (and not lids of containers), and therefore the `lids' are not literally ‘heavy’. These examples came from the Google Books corpus, so I think it is entirely possible that this is the case.}
 
 \item \emph{Pg.~18: I am also curious about the \emph{trees-heavy} pairing indicated here. What are these sentences in which trees are described as being `heavy'? Are they instead sentences describing the trees as being `heavy with fruit'? If so, again, this seems like a different sort of sentence and non-literal use of heavy.}
+
+A quote from one of our participants: ``I'm sometimes unsure what is being asked when the question is ``does the sentence make sense?''  Sentences such as ``The houses are heavy,'' are uncommonly needed (!), but if a house was being moved off its foundation, it might be used.  Same with the trees being heavy -- maybe they're on a logging truck.  But in day to day speech, no, you wouldn't hear these sentences.''
 
 \item \emph{Pg.~18: A similar concern might be raise about \emph{big-boys}, which has two interpretations.}
 
