--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -179,7 +179,7 @@ plurality \sep distributive vs.~collective interpretations \sep ambiguity resolu
 
 If we hear ``the boys carried a piano,'' they likely carried one piano together; if we hear ``the pianos are big'' then likely each one is big. How do we understand the meaning of \emph{plural predications} like these?
 
-The semantics and pragmatics of predicating properties to singular individuals (e.g., ``The box is big'') is already a complicated endeavor. What does it mean for a box to be big, or tall, or heavy? How do we represent its size or height or weight? Recent answers to these sorts of questions highlight the central role of context in the calculus of meaning: what properties get ascribed depend crucially on the context of predication \citep[cf.~tall for a boy vs.~tall for a basketball player;  e.g.,][]{kennedy1999,lassitergoodman2013}. The complexity associated with answering these questions increases once we introduce pluralities into the mix. 
+The semantics and pragmatics of predicating properties to singular individuals (e.g., ``The box is big'') is already a complicated endeavor. What does it mean for a box to be big, or tall, or heavy? How do we represent its size or height or weight? Recent answers to these sorts of questions highlight the central role of context in the calculus of meaning: what properties get ascribed depend crucially on the context of predication \citep[cf.~tall for a boy vs.~tall for a basketball player;  e.g.,][]{kamppartee1995,kennedy1999,lassitergoodman2013}. The complexity associated with answering these questions increases once we introduce pluralities into the mix. 
 %: however difficult the singular case, the plural case is at least $n$ times as complicated, for the $n$ many individuals under consideration. 
 Particularly puzzling is the distributive vs.~collective ambiguity of plural predcation \citep[e.g.,][]{link1983,link1987,link1998,scha1984,landman1989,landman1989b,landman1996,lasersohn1988,lasersohn1990,lasersohn1995,lasersohn1998,schwarzschild1994,schwarzschild1996}:
 
@@ -190,7 +190,8 @@ Particularly puzzling is the distributive vs.~collective ambiguity of plural pre
 When hearing \Last, we may infer that each box on its own counts as heavy, as in \Last[a], or only that their total weight is heavy, as in \Last[b]. Under a collective interpretation, many light boxes may together count as heavy \citep{scha1984}.
 How is the interpretation determined?
 
-Consider the well-documented yet poorly understood phenomenon of ``stubborn distributivity'' \citep{quine1960,schwarzschild2011,vazquezrojas2012,zhang2013,syrett2015}, whereby some predicates (e.g., \emph{heavy}, \emph{expensive}, \emph{voluminous}) readily admit collective construals, whiles others (e.g., \emph{big}, \emph{tall}, \emph{round}) do not. 
+Consider the well-documented yet poorly understood phenomenon of ``stubborn distributivity'' \citep{quine1960,schwarzschild2011,vazquezrojas2012,zhang2013,syrett2015}, whereby some predicates do not admit collective construals (e.g., \emph{big}, \emph{tall}, \emph{round}), in constrast to those that do (e.g., \emph{heavy}, \emph{expensive}, \emph{voluminous}). 
+%(e.g., \emph{heavy}, \emph{expensive}, \emph{voluminous}) readily admit collective construals, whiles others (e.g., \emph{big}, \emph{tall}, \emph{round}) do not. 
 %When complaisantly collective gradable predicates like \emph{heavy} (also \emph{expensive}, \emph{voluminous}) are used in plural predications the meaning is ambigious. Under a distributive reading, \ref{boxeseach}, the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \ref{boxestogether}, we ascribe the property to the subject as a whole---in the case of \ref{boxes} commenting on the total weight of the boxes; many light boxes may together count as heavy \citep{scha1984}.
 %The collective interpretation available to \emph{heavy} proves elusive for most other gradable predicates. 
 For instance, a speaker is hard-pressed to use the sentence in \Next to say of the boxes that their total size is large.
@@ -204,7 +205,7 @@ Size and shape adjectives
 %(e.g., \emph{tall}, \emph{long}, \emph{round}) 
 resist collective interpretations. \cite{schwarzschild2011} terms them ``stubbornly distributive,'' signaling the lack of collective interpretations. \citet{zhang2013} labels this class of predicates ``delimitable,'' highlighting their usage to describe physical extents. Supporting the robustness of this phenomenon, \cite{syrett2015} finds evidence of stubborn distributivity in children as young as 3 years of age.
 
-Collective predication arises when a property is ascribed directly to a plurality, rather than distributed among its members \citep{link1983}. Semanticists treat stubborn distributivity as a lexical distinction: stubbornly distributive predicates behave as such because they cannot contain pluralities in their basic denotations \citep{schwarzschild2011,vazquezrojas2012,zhang2013}.\footnote{In his characterization of stubborn distributivity, Schwarzschild first assumes that gradable adjectives are predicates of events \citep[e.g.,][]{higginbothamschein1989}. Thus, \emph{heavy} predicates over \textsc{heavy} events, \emph{big} over \textsc{big} events, etc. For \citeauthor{schwarzschild2011}, stubbornly distributive predicates are those that require their events to have only single participants. The details are not directly relevant for our purposes; what is relevant is the lexical distinction \citeauthor{schwarzschild2011} and others make between stubbornly distributive and complaisantly collective predicates.}
+Collective predication arises when a property is ascribed directly to a plurality, rather than distributed among its members \citep{link1983}. Semanticists treat stubborn distributivity as a lexical distinction: stubbornly distributive predicates behave as such because they cannot contain pluralities in their basic denotations  \citep{schwarzschild2011,vazquezrojas2012,zhang2013}.\footnote{In his characterization of stubborn distributivity, Schwarzschild first assumes that gradable adjectives are predicates of events \citep[e.g.,][]{higginbothamschein1989}. Thus, \emph{heavy} predicates over \textsc{heavy} events, \emph{big} over \textsc{big} events, etc. For \citeauthor{schwarzschild2011}, stubbornly distributive predicates are those that require their events to have only single participants. The details are not directly relevant for our purposes; what is relevant is the lexical distinction \citeauthor{schwarzschild2011} and others make between stubbornly distributive and complaisantly collective predicates (i.e., those predicates that allow collective construals).}
 This explanation suffers two flaws:
 First, it hypothesizes a categorical distinction that may not hold; in Expt.~2, we find a gradient of collectivity, with no clear boundary.
 Second, it leaves unexplained why some predicates would contain pluralities and others not---is there a deeper explanation in terms of the properties named?
@@ -231,7 +232,7 @@ It also predicts that context should matter: in a context where the collective p
 
 For physical properties, the stability of physical arrangements is a key element of context. If arrangements are less likely to change, collective properties become more predictable, and so collective interpretations become more useful and more likely. 
 We test this prediction in Expt.~3, measuring whether collective \emph{big} and \emph{tall} indeed feel more natural for boxes that are always stacked regularly than for jumbled piles of boxes.
-More generally, some types of objects may have more predictable collective properties than others by virtue of how regularly they instantiate in the world.  If we could find objects that instantiate in regular physical arrangements (e.g., shelves or waves) or with no physical arrangement at all (e.g., numbers or ideas), we might expect stubbornly distributive predicates to more readily admit collective interpretations when the nouns that name these objects serve as subject.
+More generally, some types of objects may have more predictable collective properties than others by virtue of how regularly they actualize in the world.  If we could find objects that actualize in regular physical arrangements (e.g., shelves or waves) or with no physical arrangement at all (e.g., numbers or ideas), we might expect stubbornly distributive predicates to more readily admit collective interpretations when the nouns that name these objects serve as subject.
 This reasoning leads to the prediction that the nouns which serve as objects in a plural predication should also affect the likelihood of collective interpretation. %\ndg{put an example back here?}
 In Expt.~2, we test whether this holds for a variety of predicates.
 
@@ -239,7 +240,7 @@ In Expt.~2, we test whether this holds for a variety of predicates.
 Beyond contextual predictability of collective properties, the pragmatic view of plural predication entails that other standard pragmatic pressures should come to bear on the reasoning processes of speakers and listeners, affecting the felicity and thereby likelihood of the collective (and distributive) interpretation.
 To whit, changing the speaker's epistemic state ought to influence the resulting disambiguation between distributive and collective interpretations. 
 If a speaker lacks evidence that would verify a specific interpretation, and if a listener knows this about the speaker, then that unsupported interpretation should be particularly improbable. This intuition derives straightforwardly from the Maxim of Quality from \cite{grice1975}: ``Do not say that for which you lack adequate evidence.'' 
-We test this prediction first in Expt.~1 and then with a more sensitive measure in Expt.~3.
+We test this prediction first in Expt.~1 with a reference task and then with a more sensitive measure in Expt.~3.
 
 %\gcs{this paragraph feels out of place, but I don't know where else to put it..}
 %To understand more precisely why and how context  influences the interpretation of plural predication, we formalize its contribution under a pragmatic account of ambiguity resolution in section \ref{model}, using a variant of the Rational Speech-Acts model \citep[e.g.,][]{frankgoodman2012,lassitergoodman2013}. The model explains the patterns of our data well, supporting the underlying hypothesis.
@@ -445,7 +446,7 @@ However, given that Cubert would need to lift individual boxes to assess their i
 
 \subsection{Results}
 
-Results were coded in terms of whether participants chose the collective referent, and therefore the collective interpretation for Cubert's statement to Dot. Fig.\ \ref{results2} displays the proportion of collective choices, with bootstrapped 95\% confidence intervals drawn from 10,000 samples of the data \citep{diciccioefron1996}; a value of 1 indicates that participants chose the collective referent 100\% of the time.
+Results were coded in terms of whether participants chose the collective referent, and therefore accessed the collective interpretation for Cubert's statement to Dot. Fig.\ \ref{results2} displays the proportion of collective choices, with bootstrapped 95\% confidence intervals drawn from 10,000 samples of the data \citep{diciccioefron1996}; a value of 1 indicates that participants chose the collective referent 100\% of the time.
 
 To evaluate the disambiguating potential of our paraphrases, we first look at responses to these paraphrases, excluding the bare utterance. Mean proportion of collective referent choice for collective paraphrases with \emph{together} was 85\% (i.e., near ceiling); for distributive paraphrases with \emph{each} this proportion was 10\% (i.e., near floor). We fit a mixed effects logistic regression model \citep{baayenetal2008} using the \emph{lme4} package \citep{batesetal2014} in \emph{R}, predicting referent choice by \textsc{utterance} (``each,'' ``together'') and its interaction with \textsc{predicate} (\emph{big}, \emph{heavy}, \emph{tall}; \emph{big} was coded as the reference level), as well as \textsc{trial} order.  The model included random intercepts for participants and scenarios (i.e., the maximal random effects structure supported by the data). The full regression model appears in \ref{expt1results}. The model finds a main effect of \textsc{utterance} ($\beta$ = 4.99, $SE$ = 0.82, $z$ = 6.08, p $<$ 0.001), confirming that collective \emph{together} yielded greater rates of collective referent choice than distributive \emph{each}; the interactions with \textsc{predicate} were not significant (\emph{heavy}: $\beta$ = -1.39, $SE$ = 0.91, $z$ = -1.52, p $=$ 0.13; \emph{tall}: $\beta$ = -0.63, $SE$ = 0.95, $z$ = -0.66, p $=$ 0.51). The effect of \textsc{trial} was also not significant ($\beta$ = 0.07, $SE$ = 0.07, $z$ = 1.00, p $=$ 0.32). Thus, the ``together'' utterances yielded collective referent choices, and the ``each'' utterances did not, for each of the three predicates.
 %\ndg{should we have predicate be a predictor here so that we can report (whether) the predicate didn't affect choice for the fully dissambiguated phrases?}\gcs{if we have predicate interact with utterance, the interaction is not significant. include?}
