--- a/writing/Cubert/revision/greg.bib
+++ b/writing/Cubert/revision/greg.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2016-06-08 09:26:25 -0700 
+%% Created for Greg Scontras at 2016-06-15 14:51:08 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kamppartee1995,
+	Author = {Hans Kamp and Barbara Partee},
+	Date-Added = {2016-06-15 21:49:43 +0000},
+	Date-Modified = {2016-06-15 21:51:08 +0000},
+	Journal = {Cognition},
+	Pages = {129-191},
+	Title = {Prototype theory and compositionality},
+	Volume = {57},
+	Year = {1995}}
 
 @article{syrettmusolino2013,
 	Author = {Kristen Syrett and Julien Musolino},
