more responses to reviewer 2

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -241,29 +241,51 @@ To avoid this confusion, we now say that Expt.~1 is a reference task when we men
 
 \item \emph{Pg.~14-18: The role of animacy does not appear to have been controlled for in the corpus search in the naturally-occurring or derivative examples. This seems important, and should be addressed. Note that of the examples in (6) on pg. 18, there are more inanimate nouns, and the number varies for each predicate.}
 
+So that we could get a sample of occurrences of plural predication, we intentionally avoided restrictions on our corpus search like animacy of the subject noun. The corpus experiments serve to extend our paraphrase methodology with naturally-occurring examples, and to get a better picture of the empirical terrain of plural predication. We do not intend for the corpus experiments to be robust tests of our hypotheses concerning contextual predictability and speaker knowledge; these hypotheses are tested in Expts.~3 and 4.
+
 \item \emph{Pg.~14-18: The full list of sentences from Experiments 2a, 2b should be provided in an appendix.}
+
+\gcs{Should we do this, or point out that the paper is already too long and the full set of sentences appears in the relevant figures?}
 
 \item \emph{Pg.~14: I'm worried about a circularity in the design of Experiment 2. The authors found highly frequent instances of the sentence template \emph{The NOUNS were ADJ} and created additional examples from these. Participants then chose a paraphrase for these examples. But if the participants are encountering highly frequent examples in the experiment, which presumably have an interpretation paired with them, then aren't they identifying that frequently-intended interpretation in this task?}
 
+Our intention was to investigate the frequently-intended interpretations of plural predications. However, we hesitate to assume that a given sentence has a single interpretation paired with it. In fact, the gradience we observe in our results would suggest against such an assumption.
+
 \item \emph{Pg.~15, 19: The authors filtered out all sentences for which participants reported that the sentences did not `make sense.' I'm not sure why this was done post-hoc, instead of via a pre-experiment norming task. The 67\% `made sense' reported in Experiment 2b seems quite low to me. I would like to request that the authors to include a note about this.}
+
+The 67\% `made sense' rate was for the novel sentences that participants encountered in Expt.~2a. These novel sentences served as fillers so that participants were not only encountering highly-frequent sentences. However, our analyses look only at the highly-frequent sentences, and participants indicated that these made sense 95\% (Expt.~2a) and 98\% (Expt.~2b) of the time. To avoid confusion, we have moved our mentions of the `made sense' rates for the filler sentences to footnotes.
 
 \item \emph{Pg.~16, figure 4: What should be made of the near-50 to 60\% ratings/endorsement of the vast majority of the sentences? This seems troublesome to me.}
 
+We are careful not to conclude anything on the basis of the specific mean collective endorsement rating for any given predicate. What we do conclude is that there are no clear groupings of predicates that would suggest the categorical distinction implied by stubborn distributivity.
+
 \item \emph{Pg.~16, figure 4: I am still completely confused as to how certain sentences as indicated on the x axis, such as those created by the combination of eyes-open, natives-friendly, walls-white, etc.) are really given a collective reading. What exactly does this mean? In each of these instances, don’t the atomic individuals still have to have the property – if not all of them, then some near-maximal amount?}
+
+We believe the confusion arises here because of certain atypical assumptions the reviewer is making about collective interpretations. Please see our response to Reviewer 2's point 5 above.
 
 \item \emph{Pg.~18: I am concerned that the \emph{lids} noun in (6) is really eyelids (and not lids of containers), and therefore the `lids' are not literally ‘heavy’. These examples came from the Google Books corpus, so I think it is entirely possible that this is the case.}
 
+It certainly is possible that our corpus search identified tokens of `lids' wherein the noun refers to eyelids. When we excluded abstract interpretations, we were looking at our specific sentence frame (e.g., ``the rains were heavy'' or ``the casualties were heavy''). There is a perfectly reasonable literal, non-abstract interpretation for ``the lids are heavy.'' 
+
 \item \emph{Pg.~18: I am also curious about the \emph{trees-heavy} pairing indicated here. What are these sentences in which trees are described as being `heavy'? Are they instead sentences describing the trees as being `heavy with fruit'? If so, again, this seems like a different sort of sentence and non-literal use of heavy.}
 
-A quote from one of our participants: ``I'm sometimes unsure what is being asked when the question is ``does the sentence make sense?''  Sentences such as ``The houses are heavy,'' are uncommonly needed (!), but if a house was being moved off its foundation, it might be used.  Same with the trees being heavy -- maybe they're on a logging truck.  But in day to day speech, no, you wouldn't hear these sentences.''
+As in our response to the previous point, at issue is the readily-accessible interpretation for ``the trees were heavy'' whereby the speaker comments on the weight of trees. Here is a post-test quote from one of our participants that summarizes the issue nicely: ``I'm sometimes unsure what is being asked when the question is `does the sentence make sense?'  Sentences such as `The houses are heavy,' are uncommonly needed (!), but if a house was being moved off its foundation, it might be used.  Same with the trees being heavy -- maybe they're on a logging truck.  But in day to day speech, no, you wouldn't hear these sentences.''
 
 \item \emph{Pg.~18: A similar concern might be raise about \emph{big-boys}, which has two interpretations.}
 
+
+
 \item \emph{Pg.~19-20: I would have expected the \% `collective' associated with \emph{heavy} to be higher, and would have liked for the authors to say a little more about the relatively low \% observed.}
+
+We ran these experiments so that we could calibrate our (and the reader's) expectations. A semanticist who identifies `heavy' as one of the few gradable predicates that allows a collective interpretation would likely have an inflated sense of the predicate's collective interpretation rate.
 	
-\item \emph{Pg.~19-20: The \% `collective' for \emph{big} and \emph{tall} sure looks like an indication of “stubborn distributivity”+noise to me! If the authors think that the results should not be interpreted in this way, I think they should address this possible interpretation head on.}
+\item \emph{Pg.~19-20: The \% `collective' for \emph{big} and \emph{tall} sure looks like an indication of ``stubborn distributivity''+noise to me! If the authors think that the results should not be interpreted in this way, I think they should address this possible interpretation head on.}
+
+We address this possible interpretation head-on in the \emph{Results} section of Expt.~2b: ``We might take the split in behavior between \emph{heavy} on the one hand and \emph{big} and \emph{tall} on the other as evidence for a categorical divide between complaisantly collective and stubbornly distributive predicates. However, comparing the predicates at the level of individual subject nouns suggests otherwise\ldots''
 
 \item \emph{Pg.~25: If I understand Figure 8 correctly, participants were given the paraphrase sentences one on top of the other, and asked to slide the scale for each sentence. Did the scale start at 0 or 50 for each? More importantly, why present the sliding scales next to each other and not across items? I worry that this setup precludes them from allowing both to be rated highly, and that they should complement each other (which is what it looks like in Figure 9).}
+
+The leftmost point on the scale (corresponding to `definitely not') was coded as 0; the rightmost point (corresponding to `definitely') was coded as 1. We presented the sliding scales next to each other, rather than across items, to highlight the potential ambiguity of the test sentences.
 
 \item \emph{Pg.~29: The authors should explain what they mean by saying that the collective and distributive senses as `vague expressions.'}
 
@@ -278,9 +300,15 @@ into account morphosyntactic and structural information when doing so, which is 
 
 \item \emph{Pg.~34: The wording ``an old observation about collective interpretations for gradable predicates with plural subjects'' makes me wonder at what level the authors see the ambiguity being encoded (the VP level or the sentence level), so it might be helpful to add a note somewhere about this, since there have been different approaches to the semantic treatment of the collective/distributive ambiguity over the years. (The comment in the top paragraph on pg.~38 about the locus of ambiguity is also related to this point.)}
 
+
+
 \item \emph{Pg.~36: The authors suggest that, ``stubbornly distributive predicates name collective properties that are difficult to accurately communicate.'' By this point in the paper, I am so far from convinced that the participants are really accessing a true collective reading, that on this page, I am not on board with the conclusions, and am certainly not in agreement with this claim, even though I do agree with the authors that the context is able to bring out readings that are otherwise suppressed, and I think the experiments presented in the paper do a nice job of showing that this is the case. Whether or not these non-strictly-distributive readings can really be taken to be collective readings is another matter.}
 
+
+
 \item \emph{Pg.~38: I would think that if the noun phrase is construed as an aggregate (i.e., a single collection) instead of a group, then the predicate is no longer applying to the group, but rather to the collectivizer, in which case we return to the possibility that participants may have inserted a silent collectivizing noun into their interpretation of the sentences.}
+
+Please see our responses to Reviewer 2's points 6 and 28 above.
 
 \end{enumerate}
 
