--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -517,7 +517,7 @@ Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``d
 \subsubsection{Results}
 
 %\ndg{give some stats on the 'makes sense' judgements: of the original sentences, what was the mean percent sensible? range? for the constructed sentences?}
-Of the original 40 most frequent sentences, participants indicated that they ``made sense'' 95\% of the time. Of the novel sentences, participants indicated that they ``made sense'' 67\% of the time.
+Of the original 40 most frequent sentences, participants indicated that they ``made sense'' 95\% of the time.\footnote{Of the novel sentences, participants indicated that they ``made sense'' 67\% of the time.}
 To avoid possible confusion that nonsensical interpretations might introduce, in the analyses reported below we only look at responses to utterances that participants said made sense. %\ndg{why?}
 
 We begin with a look at the range of collective endorsement ratings.\footnote{A look at distributive endorsement ratings, or normalized collective ratings (i.e., the difference between collective and distributive ratings) reveals similar patterns of results, owing to the high negative correlation between distributive and collective endorsement ratings ($r=-0.78$).} Fig.~\ref{sentence-coll} plots average collective endorsement ratings for each of the 40 most frequent sentences with bootstrapped 95\% confidence intervals. Descriptively, we see a wide range of ratings, spanning from approximately 25\%  to 85\% endorsement; participants appear to be comfortable using the full scale. An important observation about the distribution of ratings in Fig.~\ref{sentence-coll} is its relatively smooth gradient: we fail to find clear groupings of predicates, such that they behave in one way or another with respect to collective interpretations. Stubbornly distributive \emph{small} indeed occurs toward the low end of collective endorsement ratings, but not markedly so.
@@ -582,7 +582,7 @@ As with Expt.~2a, participants judged whether the resulting sentences made sense
 
 \subsubsection{Results}
 
-Of the original 15 most frequent sentences, participants indicated that they made sense 98\% of the time; of the novel sentences, participants indicated that they made sense 87\% of the time.
+Of the original 15 most frequent sentences, participants indicated that they made sense 98\% of the time.\footnote{Of the novel sentences, participants indicated that they made sense 87\% of the time.} 
 We again look only at responses to the original most frequent utterances that participants indicated made sense to them.
 
 %\ndg{here, but also in other expts, should do some analysis of the distributive paraphrase... it's weird to just leave it out. if it is truly redundant with the collective measure, how about quantifying that? ie. report their correlation or such.}
