--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -177,7 +177,7 @@ plurality \sep distributive vs.~collective interpretations \sep ambiguity resolu
 %% main text
 \section{Introduction}
 
-If we hear ``the boys carried a piano,'' they likely carried one piano together; if we hear ``the pianos are big'' then likely each one is big. How do we understand the meaning of \emph{plural predications} like these?
+%If we hear ``the boys carried a piano,'' they likely carried one piano together; if we hear ``the pianos are big'' then likely each one is big. How do we understand the meaning of \emph{plural predications} like these?
 
 The semantics and pragmatics of predicating properties to singular individuals (e.g., ``The box is big'') is already a complicated endeavor. What does it mean for a box to be big, or tall, or heavy? How do we represent its size or height or weight? Recent answers to these sorts of questions highlight the central role of context in the calculus of meaning: what properties get ascribed depend crucially on the context of predication \citep[cf.~tall for a boy vs.~tall for a basketball player;  e.g.,][]{kamppartee1995,kennedy1999,lassitergoodman2013}. The complexity associated with answering these questions increases once we introduce pluralities into the mix. 
 %: however difficult the singular case, the plural case is at least $n$ times as complicated, for the $n$ many individuals under consideration. 
@@ -219,9 +219,9 @@ Rather than roaming the lexicon with name tags specifying their attitudes toward
 
 We suggest that the key underlying notion is the stability or \emph{contextual predictability} of a property when applied to a collection.\footnote{See \citeauthor{schein} (\emph{forthcoming}; ch.~4.1.1) for a similar line of reasoning; \citeauthor{schein} frames his observation in a Neo-Davidsonian event-semantic framework.}
 That is, there are aspects of context that affect the computation of collective properties, over and above those that affect the individual properties; when there is more uncertainty about these aspects of context, the collective property is less stable.
-For instance, collective \emph{tall} names the vertical extent of a set of objects, and can vary dramatically with their arrangement.
+For instance, collective \emph{tall} names the vertical extent of a set of objects, which can vary dramatically with their arrangement.
 In contrast, collective \emph{heavy} names the total weight of a set of objects, which does not vary with arrangement. 
-If the precise arrangement is not in common ground, then the collective use of \emph{tall} would be more likely to mislead a listener than that of \emph{heavy}---in contrast, the distributive meaning of each predicate is fully specified, independent of arrangement. A listener would thus not expect a cooperative speaker to intend the collective meaning of \emph{tall}.
+If the precise arrangement is not in common ground, then the collective use of \emph{tall} would be more likely to mislead a listener than that of \emph{heavy}---the listener and the speaker could be encountering different arrangements. In contrast, the distributive meaning of each predicate is fully specified, independent of arrangement. A listener would thus not expect a cooperative speaker to intend the collective meaning of \emph{tall}.
 
 Here is the general hypothesis: computing the meaning of a collective interpretation is susceptible to a varying amount of noise depending on the contextual predictability of the property at issue.
 To communicate effectively and avoid possible confusion, collective interpretations will be avoided by speakers in the case of such noisy predicates; distributive interpretations, being less variable, are the safe bet. 
@@ -913,8 +913,8 @@ The other interpretation variables ($v$, $\theta_d$, $\theta_c$) are lifted, so 
 The speaker, $S_{1}$, chooses an utterance \emph{u} that would most effectively communicate some state \emph{s} to a literal listener \emph{L}$_{0}$, increasing utterance informativity by decreasing surprisal.  In other words, the speaker's utility function $U_{S_{1}}$ minimizes the effort \emph{L}$_{0}$ would need to arrive at \emph{s} from \emph{u}, while being efficient (i.e., minimizing utterance cost, $C(u)$):
 $$U_{S_{1}}(u;s,v,\theta_d,\theta_c) = \textrm{log}(L_{0}(s|u,v,\theta_d,\theta_c)) - C(u)$$
 To capture the speaker's epistemic state, we follow \cite{goodmanstuhlmuller2013} by assuming the speaker has a private belief distribution about the state of the world, $P(s|o)$, that depends on some observations $o$ of the true world. 
-The speaker then selects an utterance $u$ to convey information about the likely state $s$ that generated the observation $o$:
-$$P_{S_{1}} (u|o,v,\theta_d,\theta_c) \propto \textrm{exp}(\alpha \mathbb{E}_{P_a(s|o)}[U_{S_{1}} (u;s,v,\theta_d,\theta_c)])$$
+The speaker then selects an utterance $u$ to convey information about the likely state $s$ that generated the observation $o$: \gcs{I'm not sure where $\alpha$ should go -- in the model, $\alpha$ is a multiplier on the S1 distribution called in the L1 model}
+$$P_{S_{1}} (u|o,v,\theta_d,\theta_c) \propto \alpha \cdot \textrm{exp}(\mathbb{E}_{P_a(s|o)}[U_{S_{1}} (u;s,v,\theta_d,\theta_c)])$$
 We will assume, based on our experimental setup, that the speaker has one of two modes of \emph{access} to the world state: if $a=\texttt{full}$, then the speaker has observed the full state, in which case $P_{\texttt{full}}(s|o) = \delta_{s=o}$ is a delta distribution on the true (observed) state; if $a=\texttt{sum}$, then the speaker has only observed the sum (e.g., observing the total weight of some boxes by lifting them together), in which case the speaker considers all of the possible states that could have led to the sum observation, $P_{\texttt{sum}}(s|o)\propto P(s)\delta_{\sum_{x\in s} d(x) = o}$.
 
 %may have observed 
@@ -1041,11 +1041,11 @@ The plural predication is both ambiguous ($v$) and vague ($\theta_{c}$, $\theta_
 
 To generate predictions, we need to fix various parameter settings within the model; we aim to make the simplest choices possible, focussing on qualitative predictions.\footnote{The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}.} %\ndg{note: update code to most clearly reflect final model description.}}
 %Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
-Each state, $s$, consists of three objects, each of which has degree $3$ or $4$. The prior on states $P(s)$ was taken to be uniform. The distributive threshold $\theta_d$ was uniformly $3$ or $4$ (the two possible object degrees). The collective threshold $\theta_c$ was uniformly drawn from the possible total degrees, $\{9,10,11,12\}$. %\ndg{should really be uniform, not state prior.}
+Each state, $s$, consists of three objects, each of which has degree $2$, $3$, or $4$. The prior on states $P(s)$ was taken to be uniform. The distributive threshold $\theta_d$ was uniformly $2$, $3$, or $4$ (the possible object degrees). The collective threshold $\theta_c$ was uniformly drawn from the possible individual and total degrees, $\{2, 3, 4, 5, 6, 7, 8, 9,10,11,12\}$. %\ndg{should really be uniform, not state prior.}
 %ranged over state degrees (i.e., 6, 7 8), and was drawn uniformly from the state prior.
 %The priors on state $P(s)$ and on thresholds $P(\theta_d,\theta_c)$ are taken to be uniform. \ndg{check}
 We take $P(v)$ to be Bernoulli with a single free parameter (i.e., the prior bias toward collective interpretations); this parameter was set to $0.8$. 
-We take the cost $C(u)$ to be $1$ for the ambiguous utterance and $2$ for both of the unambiguous utterances---a reasonable assumption from the point of view of production, given that unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}). The parameter $\alpha > 0$ controls the speaker's optimality; we set $\alpha$ to $7$. 
+We take the cost $C(u)$ to be $2$ for the ambiguous utterance and $3$ for both of the unambiguous utterances---a reasonable assumption from the point of view of production, given that unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}). We also include a null utterance with cost 1; the null utterance corresponds to saying nothing at all and signaling the listener to rely wholly on prior beliefs. The parameter $\alpha > 0$ controls the speaker's optimality; we set $\alpha$ to $10$. 
 Importantly, the qualitative patterns reported below are robust to changes in these parameters and assumptions.
 
 %\ndg{what about alpha?}
@@ -1063,7 +1063,7 @@ Importantly, the qualitative patterns reported below are robust to changes in th
 %In our box setting, this semantics captures the fact that the distributive interpretation of a gradable predicate is true of a plurality when each of its members exceeds a contextually-determined cutoff \citep{kennedy1999,lassitergoodman2013}. The \texttt{collective-interpretation} is true of a state $s$ just in case the sum of that state---the plurality taken together---exceeds some collective threshold. Here we capture the sum-based aggregation inherent to collective interpretations of gradable predicates \citep{scha1984}. 
 %So far, no deviation from the formal semantics tradition.
 
-Our central claim surrounds the effect of $P(c)$, which controls the predictability of the collective interpretation. To evaluate its role, we generated model predictions for distributions of varying entropy; $c$ was drawn from a normal distribution centered around $0$. The variance of this distribution controls the amount of collective interpretation noise. We begin by the comparing effects of \texttt{no} ($\sigma=0.01$), \texttt{low} ($\sigma=0.75$), \texttt{mid} ($\sigma=1.00$), and \texttt{high} ($\sigma=1.25$) collective noise.
+Our central claim surrounds the effect of $P(c)$, which controls the predictability of the collective interpretation. To evaluate its role, we generated model predictions for distributions of varying entropy; $c$ was drawn from a normal distribution centered around $0$. The variance of this distribution controls the amount of collective interpretation noise. We begin by the comparing effects of \texttt{no} ($\sigma=0.01$), \texttt{low} ($\sigma=1$), \texttt{mid} ($\sigma=2$), and \texttt{high} ($\sigma=3$) collective noise.
 %
 %What sets this semantics apart is the contextual noise parameter $c$ in the \texttt{collective}-\texttt{interpretation}, a scalar multiplier of the set aggregate estimate that determines contextual predictability. 
 %%This parameter explicitly represents possible noise in the determination of, say, collective size. In other words, this parameter models the contextual predictability of a collective property, or the possibility that speakers and listeners will arrive at different truth values for a collective interpretation. For our purposes, lower noise (i.e., values closer to 1) corresponds to increased contextual predictability of the collective property. 
@@ -1082,7 +1082,7 @@ In Fig.~\ref{modelresults}, we plot the probability that the interpretation-reso
 
 \begin{figure}[htb!]
 	\centering
-	\includegraphics[width=\linewidth]{plots/model-results-sum.eps}
+	\includegraphics[width=\linewidth]{plots/model-results-revised.eps}
 	\vspace{-20pt}
 	\caption{Model predictions for the probability of the \texttt{ambiguous} utterance receiving a collective interpretation as a function of collective interpretation noise and speaker knowledge access.  
 		%\ndg{todo: regenerate this figure using parameters fit to data. also change access label to "sum" from "partial".}  
@@ -1107,7 +1107,7 @@ In Fig.~\ref{modelresults}, we plot the probability that the interpretation-reso
 
 The qualitative predictions of our plural predication model match the hypotheses and experimental results that motivated the model. Most striking is the monotonic decrease in probability of collective interpretations as collective noise increases (red bars in  Fig.~\ref{modelresults}). We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to use the ambiguous utterance, and as a result the pragmatic listener $L_{1}$ is less likely to infer that the ambiguous utterance, when used, meant the noisy collective meaning.
 
-The model also successfully predicts the qualitative increase in the probability of a collective interpretation when the speaker's  access to individual object properties is limited (blue vs.~red bars in  Fig.~\ref{modelresults}). %With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. 
+The model also successfully predicts the qualitative increase in the probability of a collective interpretation when the speaker's  access to individual object properties is limited (red vs.~blue bars in  Fig.~\ref{modelresults}). %With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. 
 $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial (i.e., sum)  knowledge, a distributive interpretation lacks epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
 
 %We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing contextual noise) increases the probability of collective interpretations; and, regardless of the amount of contextual noise, removing support for a distributive interpretation (by limiting the speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Next, we fit these parameters to the human data collected in Expt.~3 to test both qualitative and \emph{quantitative} predictions of the model.
